# cpp-starter

./: .bazelrc  .clang-tidy  .git-blame-ignore-revs  .gitignore  MODULE.bazel  flake.nix  result
parts/: check.nix  devshell.nix  fmt.nix  package.nix
src/: BUILD.bazel  lib.hh  lib.test.cc  main.cc
